# FrameworkCpp

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.YAML  app.cpp  db.hpp  links.yaml  main.cpp  main2.cpp  test.py
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  Requests.h  TLSserver.cpp  TLSserver.hpp  curl.h  handleRequest.cpp  httpConnection.hpp  httpMethods.cpp  httpMethods.h  httpMethods.hpp  logging.hpp  request.h  request.hpp  response.cpp  response.h  response.hpp  server.cpp  server.h  server.hpp  server_handler.cpp  server_handler_file.cpp  server_handler_route.cpp  server_ssl.hpp  server_workers.hpp  session.hpp
src/jinjaTemplating/: errors.h  templating.cpp  templating.h  tools.h  types.h
src/tools/: complementary_server_functions.hpp  handler_tools.hpp  idGenerator.hpp  logging.h  url_encoding.hpp
templates/: api_data.html  home_logged.html  portfolio.html  project-carrousel.html
tests/: CMakeLists.txt  exprTest.cpp  headersTest.cpp  jinjaTest.cpp  toolsTest.cpp  urlMatcherTest.cpp
